# pico-examples

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/coremark/: CMakeLists.txt  core_portme.c
benchmark/whetstone/: CMakeLists.txt  whetstone.c
